--- a/index.html
+++ b/index.html
@@ -102,79 +102,42 @@
   <div class="propiedades-content">
     <h2>Propiedades gestionadas</h2>
    
- <!-- Propiedad 1 -->
-    <div class="grid-propiedades">
-      <!-- Tarjeta individual -->
-      <div class="card-propiedad">
-        <img src="img/alburquerque14.jpg" alt="Calle de Alburquerque 14">
-        <div class="info">
-          <h3>Calle Albello, Elche</h3>
-          <div class="iconos">
-            <span>🛏3</span>
-            <span>🚿 2 </span>
-            <span>📐 90 m²</span>
-          </div>
-        </div>
-      </div>
+ <section class="propiedades">
+  <h2 class="titulo-seccion">Propiedades gestionadas</h2>
+  <div class="grid-propiedades">
 
-    <!-- Propiedad 2-->
+    <div class="propiedad-card">
+      <img src="img/h1.jpg" alt="Habitación 1">
+      <h3>Calle Francisco Tomás y Valiente 3</h3>
+      <p>🛏 4 habitaciones · 🚿 2 baños · 📐 120 m²</p>
+    </div>
 
- <div class="grid-propiedades">
-      <!-- Tarjeta individual -->
-      <div class="card-propiedad">
-        <img src="img/alburquerque14.jpg" alt="Calle de Alburquerque 14">
-        <div class="info">
-          <h3>Calle Albello, Elche</h3>
-          <div class="iconos">
-            <span>🛏3</span>
-            <span>🚿 2 </span>
-            <span>📐 90 m²</span>
-          </div>
-        </div>
-      </div>
+    <div class="propiedad-card">
+      <img src="img/h2.jpg" alt="Habitación 2">
+      <h3>Calle Felipe Moya 15</h3>
+      <p>🛏 5 habitaciones · 🚿 2 baños · 📐 140 m²</p>
+    </div>
 
- <!-- Propiedad 3 -->
-    <div class="grid-propiedades">
-      <!-- Tarjeta individual -->
-      <div class="card-propiedad">
-        <img src="img/alburquerque14.jpg" alt="Calle de Alburquerque 14">
-        <div class="info">
-          <h3>Calle Albello, Elche</h3>
-          <div class="iconos">
-            <span>🛏3</span>
-            <span>🚿 2 </span>
-            <span>📐 90 m²</span>
-          </div>
-        </div>
-      </div>
- <!-- Propiedad 4 -->
-       <div class="grid-propiedades">
-      <!-- Tarjeta individual -->
-      <div class="card-propiedad">
-        <img src="img/alburquerque14.jpg" alt="Calle de Alburquerque 14">
-        <div class="info">
-          <h3>Calle Albello, Elche</h3>
-          <div class="iconos">
-            <span>🛏3</span>
-            <span>🚿 2 </span>
-            <span>📐 90 m²</span>
-          </div>
-        </div>
-      </div>
- <!-- Propiedad 1 -->
-          <div class="grid-propiedades">
-      <!-- Tarjeta individual -->
-      <div class="card-propiedad">
-        <img src="img/alburquerque14.jpg" alt="Calle de Alburquerque 14">
-        <div class="info">
-          <h3>Calle Albello, Elche</h3>
-          <div class="iconos">
-            <span>🛏3</span>
-            <span>🚿 2 </span>
-            <span>📐 90 m²</span>
-          </div>
-        </div>
-      </div>
+    <div class="propiedad-card">
+      <img src="img/h3.jpg" alt="Habitación 3">
+      <h3>Avenida de la Libertad 40</h3>
+      <p>🛏 6 habitaciones · 🚿 3 baños · 📐 160 m²</p>
+    </div>
+
+    <div class="propiedad-card">
+      <img src="img/h4.jpg" alt="Habitación 4">
+      <h3>Calle José María Pemán 12</h3>
+      <p>🛏 4 habitaciones · 🚿 2 baños · 📐 110 m²</p>
+    </div>
+
+    <div class="propiedad-card">
+      <img src="img/h5.jpg" alt="Habitación 5">
+      <h3>Calle Jaime II 28</h3>
+      <p>🛏 5 habitaciones · 🚿 2 baños · 📐 135 m²</p>
+    </div>
+
+  </div>
+</section>
 
     
     <div class="ver-todas">
