--- a/index.html
+++ b/index.html
@@ -99,52 +99,36 @@
   </div>
 </section>
 <section class="propiedades">
-  <div class="propiedades-content">
-    <h2>Propiedades gestionadas</h2>
-   
- <section class="propiedades">
   <h2 class="titulo-seccion">Propiedades gestionadas</h2>
   <div class="grid-propiedades">
-
     <div class="propiedad-card">
       <img src="img/h1.jpg" alt="Habitación 1">
-      <h3>Calle Francisco Tomás y Valiente 3</h3>
+      <h3>Calle Almazara 12</h3>
       <p>🛏 4 habitaciones · 🚿 2 baños · 📐 120 m²</p>
     </div>
-
     <div class="propiedad-card">
       <img src="img/h2.jpg" alt="Habitación 2">
-      <h3>Calle Felipe Moya 15</h3>
+      <h3>Avenida Castilla 27</h3>
       <p>🛏 5 habitaciones · 🚿 2 baños · 📐 140 m²</p>
     </div>
-
     <div class="propiedad-card">
       <img src="img/h3.jpg" alt="Habitación 3">
-      <h3>Avenida de la Libertad 40</h3>
-      <p>🛏 6 habitaciones · 🚿 3 baños · 📐 160 m²</p>
+      <h3>Calle Menorca 4</h3>
+      <p>🛏 3 habitaciones · 🚿 1 baño · 📐 85 m²</p>
     </div>
-
     <div class="propiedad-card">
       <img src="img/h4.jpg" alt="Habitación 4">
-      <h3>Calle José María Pemán 12</h3>
-      <p>🛏 4 habitaciones · 🚿 2 baños · 📐 110 m²</p>
+      <h3>Calle Tridente 9</h3>
+      <p>🛏 4 habitaciones · 🚿 2 baños · 📐 100 m²</p>
     </div>
-
     <div class="propiedad-card">
       <img src="img/h5.jpg" alt="Habitación 5">
-      <h3>Calle Jaime II 28</h3>
-      <p>🛏 5 habitaciones · 🚿 2 baños · 📐 135 m²</p>
-    </div>
-
-  </div>
-</section>
-
-    
-    <div class="ver-todas">
-      <a href="#" class="btn-verde">Ver todas las propiedades</a>
+      <h3>Avenida de Elche 5</h3>
+      <p>🛏 3 habitaciones · 🚿 1 baño · 📐 90 m²</p>
     </div>
   </div>
 </section>
+
 
 
 
