--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <!-- HERO -->
   <section class="hero">
     <div class="hero-content">
-      <h1>Alquiler seguro<br />de inmuebles.</h1>
+      <h1 class="titulo-seccion">Alquiler seguro<br />de inmuebles.</h1>
       <p>
         En Bairoom te garantizamos el alquiler seguro de tu vivienda mes a mes, sin riesgos ni preocupaciones. <br />
         Nos encargamos de todo el proceso: desde buscar al inquilino ideal hasta reformar y revalorizar tu propiedad, para que obtengas una renta estable y asegurada sin mover un dedo. <br />
@@ -36,7 +36,7 @@
   <!-- SECCIÓN PROPIETARIOS -->
   <section class="propietarios">
     <div class="propietarios-content">
-      <h2>Seguridad máxima<br>para propietarios.</h2>
+      <h2 class="titulo-seccion">Seguridad máxima <br>para propietarios.</h2>
       <p><strong>En Bairoom ofrecemos un servicio de alquiler seguro y sin riesgos, dirigido a propietarios que buscan maximizar la rentabilidad de su vivienda sin preocuparse por la gestión.</strong></p>
       <p>Nos encargamos de todo el proceso, desde la puesta a punto del inmueble hasta su gestión integral, optimizando cada detalle para garantizarte ingresos estables y sostenidos en el tiempo.</p>
     </div>
@@ -51,7 +51,7 @@
       <div class="ventaja-item">
       <img src="icons/reparaciones.png" alt="Reparaciones">
         <div>
-          <h3>Servicio de reparaciones</h3>
+          <h3class="titulo-seccion">Servicio de reparaciones</h3>
           <p>Contamos con un equipo de reparaciones para cualquier incidente. Un técnico acudirá en menos de 24h sin coste para ti.</p>
         </div>
       </div>
