--- a/index.html
+++ b/index.html
@@ -21,17 +21,16 @@
     </div>
   </header>
 
-  <!-- HERO -->
   <section class="hero">
-    <div class="hero-content">
-      <h1 class="titulo-seccion">Alquiler seguro<br />de inmuebles.</h1>
-      <p>
-        En Bairoom te garantizamos el alquiler seguro de tu vivienda mes a mes, sin riesgos ni preocupaciones. <br />
-        Nos encargamos de todo el proceso: desde buscar al inquilino ideal hasta reformar y revalorizar tu propiedad, para que obtengas una renta estable y asegurada sin mover un dedo. <br />
-        Sin impagos. Sin gestiones. Sin complicaciones.
-      </p>
-    </div>
-  </section>
+  <div class="hero-content">
+    <h1>Alquiler seguro de inmuebles.</h1>
+    <p>En Bairoom te garantizamos el alquiler seguro de tu vivienda mes a mes, sin riesgos ni preocupaciones.</p>
+    <p>Nos encargamos de todo el proceso: desde buscar al inquilino ideal hasta reformar y revalorizar tu propiedad,<br>
+       para que obtengas una renta estable y asegurada sin mover un dedo.</p>
+    <p>Sin impagos. Sin gestiones. Sin complicaciones.</p>
+  </div>
+</section>
+
 
   <!-- SECCIÓN PROPIETARIOS -->
   <section class="propietarios">
