--- a/index.html
+++ b/index.html
@@ -9,17 +9,20 @@
 </head>
 <body>
 
-  <!-- CABECERA -->
-  <header class="navbar">
-    <div class="navbar-container">
+<!-- CABECERA -->
+<header class="navbar">
+  <div class="navbar-container">
+    <a href="index.html"> <!-- Aquí envolvemos el logo -->
       <img src="logo-bairoom.png" alt="Logo Bairoom" class="logo-white" />
-      <nav class="nav-links">
-        <a href="#">SE ANFITRIÓN</a>
-        <a href="#">POR QUÉ BAIROOM</a>
-        <a href="#">PROPIEDADES</a>
-      </nav>
-    </div>
-  </header>
+    </a>
+    <nav class="nav-links">
+      <a href="#">SE ANFITRIÓN</a>
+      <a href="#">POR QUÉ BAIROOM</a>
+      <a href="#">PROPIEDADES</a>
+    </nav>
+  </div>
+</header>
+
 
   <section class="hero">
   <div class="hero-content">
