--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div class="hero-content">
     <h1>Alquiler seguro de inmuebles.</h1>
     <p>En Bairoom te garantizamos el alquiler seguro de tu vivienda mes a mes, sin riesgos ni preocupaciones.</p>
-    <p>Nos encargamos de todo el proceso: desde buscar al inquilino ideal hasta reformar y revalorizar tu propiedad,<br>
+    <p>Nos encargamos de todo el proceso: desde buscar al inquilino ideal hasta reformar y revalorizar tu propiedad.
     para que obtengas una renta estable y asegurada sin mover un dedo.</p>
     <p>Sin impagos. Sin gestiones. Sin complicaciones.</p>
   </div>
@@ -39,8 +39,8 @@
   <!-- SECCIÓN PROPIETARIOS -->
   <section class="propietarios">
     <div class="propietarios-content">
-      <h2 class="titulo-seccion">Seguridad máxima <br>para propietarios.</h2>
-      <p><strong>En Bairoom ofrecemos un servicio de alquiler seguro y sin riesgos, dirigido a propietarios que buscan maximizar la rentabilidad de su vivienda sin preocuparse por la gestión.</strong></p>
+      <h2 class="titulo-seccion">Seguridad máxima para propietarios.</h2>
+      <p>En Bairoom ofrecemos un servicio de alquiler seguro y sin riesgos, dirigido a propietarios que buscan maximizar la rentabilidad de su vivienda sin preocuparse por la gestión.</p>
       <p>Nos encargamos de todo el proceso, desde la puesta a punto del inmueble hasta su gestión integral, optimizando cada detalle para garantizarte ingresos estables y sostenidos en el tiempo.</p>
     </div>
   </section>
