--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
     <h2>Ventajas de Bairoom</h2>
 
 
-    <div class="ventajas-grid">
-      <div class="ventaja-item">
-      <img src="icons/reparaciones.png" alt="Reparaciones">
-        <div>
-          <h3class="titulo-seccion">Servicio de reparaciones</h3>
-          <p>Contamos con un equipo de reparaciones para cualquier incidente. Un técnico acudirá en menos de 24h sin coste para ti.</p>
-        </div>
-      </div>
+  <div class="ventaja-item">
+  <img src="icons/reparaciones.png" alt="Reparaciones">
+  <div>
+    <h3>Servicio de reparaciones</h3>
+    <p>Contamos con un equipo de reparaciones para cualquier incidente...</p>
+  </div>
+</div>
+
 
       <div class="ventaja-item">
         <img src="icons/ruido.png" alt="Ruido">
