--- a/index.html
+++ b/index.html
@@ -132,6 +132,38 @@
   </div>
 </section>
 
+<section class="reseñas">
+  <h2 class="titulo-seccion">Opiniones de nuestros clientes</h2>
+  <div class="carrusel-reseñas">
+    <div class="slide-track">
+      <div class="reseña">
+        <p>“Un servicio impecable. Desde el primer día todo fue claro, fácil y rentable.”</p>
+        <div class="estrellas">★★★★★</div>
+        <span>- Lucía M., Elche</span>
+      </div>
+      <div class="reseña">
+        <p>“Me despreocupé por completo de mi piso. Bairoom se encargó de todo.”</p>
+        <div class="estrellas">★★★★★</div>
+        <span>- Carlos R., Alicante</span>
+      </div>
+      <div class="reseña">
+        <p>“Muy profesionales. Serios, rápidos y siempre atentos a cualquier detalle.”</p>
+        <div class="estrellas">★★★★★</div>
+        <span>- Marta G., Santa Pola</span>
+      </div>
+      <div class="reseña">
+        <p>“Recibo cada mes mi alquiler sin retrasos. Todo automatizado.”</p>
+        <div class="estrellas">★★★★★</div>
+        <span>- José A., Torrevieja</span>
+      </div>
+      <div class="reseña">
+        <p>“La mejor decisión como propietario. Mi vivienda está bien cuidada y con buenos inquilinos.”</p>
+        <div class="estrellas">★★★★★</div>
+        <span>- Elena F., San Juan</span>
+      </div>
+    </div>
+  </div>
+</section>
 
 
 
