--- a/index.html
+++ b/index.html
@@ -137,33 +137,34 @@
   <div class="carrusel-reseñas">
     <div class="slide-track">
       <div class="reseña">
-        <p>“Un servicio impecable. Desde el primer día todo fue claro, fácil y rentable.”</p>
         <div class="estrellas">★★★★★</div>
-        <span>- Lucía M., Elche</span>
+        <p>Servicio impecable, alquilar mi piso fue más fácil de lo que imaginaba.</p>
+        <span>– Marta G., Elche</span>
       </div>
       <div class="reseña">
-        <p>“Me despreocupé por completo de mi piso. Bairoom se encargó de todo.”</p>
         <div class="estrellas">★★★★★</div>
-        <span>- Carlos R., Alicante</span>
+        <p>Trato cercano, profesional y 100% transparente. Lo recomiendo.</p>
+        <span>– Javier M., Santa Pola</span>
       </div>
       <div class="reseña">
-        <p>“Muy profesionales. Serios, rápidos y siempre atentos a cualquier detalle.”</p>
         <div class="estrellas">★★★★★</div>
-        <span>- Marta G., Santa Pola</span>
+        <p>Bairoom se encargó de todo. Ahora ingreso sin preocupaciones.</p>
+        <span>– Laura V., Alicante</span>
       </div>
       <div class="reseña">
-        <p>“Recibo cada mes mi alquiler sin retrasos. Todo automatizado.”</p>
         <div class="estrellas">★★★★★</div>
-        <span>- José A., Torrevieja</span>
+        <p>Excelente atención, resolvieron incluso pequeñas reparaciones.</p>
+        <span>– Carlos T., Elche</span>
       </div>
       <div class="reseña">
-        <p>“La mejor decisión como propietario. Mi vivienda está bien cuidada y con buenos inquilinos.”</p>
         <div class="estrellas">★★★★★</div>
-        <span>- Elena F., San Juan</span>
+        <p>Profesionales, claros y eficaces. Me dieron confianza desde el principio.</p>
+        <span>– Nuria D., San Juan</span>
       </div>
     </div>
   </div>
 </section>
+
 
 
 
