--- a/index.html
+++ b/index.html
@@ -131,36 +131,33 @@
     </div>
   </div>
 </section>
-
 <section class="reseñas">
   <h2 class="titulo-seccion">Opiniones de nuestros clientes</h2>
-  <div class="carrusel-reseñas">
-    <div class="slide-track">
-      <div class="reseña">
-        <div class="estrellas">★★★★★</div>
-        <p>Servicio impecable, alquilar mi piso fue más fácil de lo que imaginaba.</p>
-        <span>– Marta G., Elche</span>
-      </div>
-      <div class="reseña">
-        <div class="estrellas">★★★★★</div>
-        <p>Trato cercano, profesional y 100% transparente. Lo recomiendo.</p>
-        <span>– Javier M., Santa Pola</span>
-      </div>
-      <div class="reseña">
-        <div class="estrellas">★★★★★</div>
-        <p>Bairoom se encargó de todo. Ahora ingreso sin preocupaciones.</p>
-        <span>– Laura V., Alicante</span>
-      </div>
-      <div class="reseña">
-        <div class="estrellas">★★★★★</div>
-        <p>Excelente atención, resolvieron incluso pequeñas reparaciones.</p>
-        <span>– Carlos T., Elche</span>
-      </div>
-      <div class="reseña">
-        <div class="estrellas">★★★★★</div>
-        <p>Profesionales, claros y eficaces. Me dieron confianza desde el principio.</p>
-        <span>– Nuria D., San Juan</span>
-      </div>
+  <div class="contenedor-reseñas">
+    <div class="reseña activa">
+      <div class="estrellas">★★★★★</div>
+      <p>Servicio impecable, alquilar mi piso fue más fácil de lo que imaginaba.</p>
+      <span>– Marta G., Elche</span>
+    </div>
+    <div class="reseña">
+      <div class="estrellas">★★★★★</div>
+      <p>Trato cercano, profesional y 100% transparente. Lo recomiendo.</p>
+      <span>– Javier M., Santa Pola</span>
+    </div>
+    <div class="reseña">
+      <div class="estrellas">★★★★★</div>
+      <p>Bairoom se encargó de todo. Ahora ingreso sin preocupaciones.</p>
+      <span>– Laura V., Alicante</span>
+    </div>
+    <div class="reseña">
+      <div class="estrellas">★★★★★</div>
+      <p>Excelente atención, resolvieron incluso pequeñas reparaciones.</p>
+      <span>– Carlos T., Elche</span>
+    </div>
+    <div class="reseña">
+      <div class="estrellas">★★★★★</div>
+      <p>Profesionales, claros y eficaces. Me dieron confianza desde el principio.</p>
+      <span>– Nuria D., San Juan</span>
     </div>
   </div>
 </section>
